Improve media file info fetch
Improve fetching more robustly
Cleanup mess http connection code